fixing overflow issue with x-axis

--- a/src/App.css
+++ b/src/App.css
@@ -2,33 +2,14 @@
 
 .App,
 .darkMode {
-  overflow-y: scroll;
+  width: 100%;
+  overflow-y: hidden;
   text-align: center;
-  position: relative;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: absolute;
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .scrollToTop {
@@ -41,6 +22,7 @@
 }
 
 html body .darkMode {
+  overflow-x: hidden;
   background-color: black;
 }
 
@@ -100,16 +82,6 @@ button {
     rgb(46, 118, 112),
     rgb(55, 140, 133)
   );
-}
-
-@media (prefers-color-scheme: dark) {
-  /* img {
-    opacity: 0.75;
-    transition: opacity 0.5s ease-in-out;
-  } */
-  /* img:hover {
-    opacity: 1;
-  } */
 }
 
 .page-title {
